--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
   },
-  "homepage": "http://far2raf.github.io/react-gh-pages",
+  "_comment_homepage": "http://far2raf.github.io/react-gh-pages",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
